TEST_PROGRAMS/VALID/cecily_thomas/factorial.min
# Compute n!, reading n

var n: int;
var x: int;

read n;
x = n;
n = n - 1;

if n then
	while n do
		x = x * n;
		n = n - 1;
	done
else
	x = 0;
endif

print x;
