TEST_PROGRAMS/INVALID/alexandre_st-louis_fortier/028-if-comma.min
if 0 then
  print 1;
else
  print 2;
endif;

